// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`sku-webpack-plugin > build > should create valid app 1`] = `
===================================================================
--- sourceHtml
+++ clientHtml
@@ -1,24 +1,37 @@
-<!doctype html>
+<!DOCTYPE html>
 <html>
   <head>
     <meta charset="utf-8">
     <title>
       Webpack App
     </title>
     <meta
       name="viewport"
       content="width=device-width,initial-scale=1"
     >
     <script
       defer="defer"
       src="main.js"
     >
     </script>
     <link
       href="main.css"
       rel="stylesheet"
     >
   </head>
   <body>
+    <div>
+      <style type="text/css">
+        html,body{margin:0;padding:0;background:#fff}
+            html._9se0yi11,html._9se0yi11 body{color-scheme:dark;background:#1C2330}
+      </style>
+      <div class="xx7s3l0 mu12wp10 mu12wp13">
+        <div class="_1lozp820 _9se0yi8s _9se0yi7o _9se0yib0 _9se0yi9w _9se0yi5g _9se0yi6c _9se0yiic _9se0yi4k _9se0yi4d mu12wp10 mu12wp13 _9se0yi34 _9se0yi37">
+          <span class="_1lozp820 _9se0yi50 mu12wp0 mu12wp1 mu12wp1t mu12wpa e739tz4">
+            Is it working?
+          </span>
+        </div>
+      </div>
+    </div>
   </body>
 </html>
\\ No newline at end of file
`;

exports[`sku-webpack-plugin > build > should generate the expected files 1`] = `
{
  "index.html": "<!doctype html><html><head><meta charset="utf-8"><title>Webpack App</title><meta name="viewport" content="width=device-width,initial-scale=1"><script defer="defer" src="main.js"></script><link href="main.css" rel="stylesheet"></head><body></body></html>",
  "main.css": ._1lozp820 {
  border: 0;
  box-sizing: border-box;
  font-size: 100%;
  font: inherit;
  margin: 0;
  padding: 0;
  vertical-align: baseline;
  -webkit-tap-highlight-color: transparent;
}
._1lozp821 {
  display: block;
}
._1lozp822 {
  line-height: 1;
}
._1lozp823 {
  list-style: none;
}
._1lozp824 {
  quotes: none;
}
._1lozp824:after,
._1lozp824:before {
  content: "";
}
._1lozp825 {
  border-collapse: collapse;
  border-spacing: 0;
}
._1lozp826 {
  -webkit-appearance: none;
  appearance: none;
}
._1lozp827 {
  background-color: transparent;
}
._1lozp828 {
  outline: var(--_1wmtieb10) solid transparent;
  transition: outline-color 0.125s ease;
}
._1lozp828:focus-visible {
  outline-color: var(--_1wmtiebm);
}
._1lozp82a {
  color: inherit;
}
._1lozp82b:disabled {
  opacity: 1;
}
._1lozp82b::-ms-expand {
  display: none;
}
._1lozp82d[type="number"] {
  -moz-appearance: textfield;
}
._1lozp82d[type="number"]::-webkit-inner-spin-button,
._1lozp82d[type="number"]::-webkit-outer-spin-button {
  -webkit-appearance: none;
  margin: 0;
}
._1lozp82d::-ms-clear {
  display: none;
}
._1lozp82d::-webkit-search-cancel-button {
  -webkit-appearance: none;
}
._1lozp82g {
  color: inherit;
  text-decoration: none;
}
._9se0yi0 {
  overflow: hidden;
}
._9se0yi1 {
  overflow: scroll;
}
._9se0yi2 {
  overflow: visible;
}
._9se0yi3 {
  overflow: auto;
}
._9se0yi4 {
  -webkit-user-select: none;
  user-select: none;
}
._9se0yi5 {
  outline: none;
}
._9se0yi6 {
  outline: var(--_1wmtieb10) solid transparent;
  transition: outline-color 0.125s ease;
}
._9se0yi6:focus-visible {
  outline-color: var(--_1wmtiebm);
}
._9se0yi7 {
  opacity: 0;
}
._9se0yi8 {
  z-index: 0;
}
._9se0yi9 {
  z-index: 1;
}
._9se0yia {
  z-index: 2;
}
._9se0yib {
  z-index: 90;
}
._9se0yic {
  z-index: 100;
}
._9se0yid {
  z-index: 200;
}
._9se0yie {
  z-index: 290;
}
._9se0yif {
  z-index: 300;
}
._9se0yig {
  z-index: 400;
}
._9se0yih {
  cursor: default;
}
._9se0yii {
  cursor: pointer;
}
._9se0yij {
  pointer-events: none;
}
._9se0yik {
  top: 0;
}
._9se0yil {
  bottom: 0;
}
._9se0yim {
  left: 0;
}
._9se0yin {
  right: 0;
}
._9se0yio {
  height: 100%;
}
._9se0yip {
  height: var(--_1wmtieb9);
}
._9se0yiq {
  width: 100%;
}
._9se0yir {
  width: var(--_1wmtieb9);
}
._9se0yis {
  min-width: 0;
}
._9se0yit {
  max-width: var(--_1wmtieb11);
}
._9se0yiu {
  max-width: var(--_1wmtieb12);
}
._9se0yiv {
  max-width: var(--_1wmtieb13);
}
._9se0yiw {
  max-width: var(--_1wmtieb14);
}
._9se0yix {
  max-width: -moz-fit-content;
  max-width: fit-content;
}
._9se0yiy {
  transition: var(--_1wmtieb5i);
}
._9se0yiz {
  transition: var(--_1wmtieb5j);
}
._9se0yi10:active {
  transform: var(--_1wmtieb5k);
}
html._9se0yi11 ._9se0yi13,
html:not(._9se0yi11) ._9se0yi12 {
  background: var(--_1wmtieb1t);
}
html._9se0yi11 ._9se0yi15,
html:not(._9se0yi11) ._9se0yi14 {
  background: var(--_1wmtieb1u);
}
html._9se0yi11 ._9se0yi17,
html:not(._9se0yi11) ._9se0yi16 {
  background: var(--_1wmtieb1v);
}
html._9se0yi11 ._9se0yi19,
html:not(._9se0yi11) ._9se0yi18 {
  background: var(--_1wmtieb1w);
}
html._9se0yi11 ._9se0yi1b,
html:not(._9se0yi11) ._9se0yi1a {
  background: var(--_1wmtieb1x);
}
html._9se0yi11 ._9se0yi1d,
html:not(._9se0yi11) ._9se0yi1c {
  background: var(--_1wmtieb1y);
}
html._9se0yi11 ._9se0yi1f,
html:not(._9se0yi11) ._9se0yi1e {
  background: var(--_1wmtieb1z);
}
html._9se0yi11 ._9se0yi1h,
html:not(._9se0yi11) ._9se0yi1g {
  background: var(--_1wmtieb20);
}
html._9se0yi11 ._9se0yi1j,
html:not(._9se0yi11) ._9se0yi1i {
  background: var(--_1wmtieb21);
}
html._9se0yi11 ._9se0yi1l,
html:not(._9se0yi11) ._9se0yi1k {
  background: var(--_1wmtieb22);
}
html._9se0yi11 ._9se0yi1n,
html:not(._9se0yi11) ._9se0yi1m {
  background: var(--_1wmtieb23);
}
html._9se0yi11 ._9se0yi1p,
html:not(._9se0yi11) ._9se0yi1o {
  background: var(--_1wmtieb24);
}
html._9se0yi11 ._9se0yi1r,
html:not(._9se0yi11) ._9se0yi1q {
  background: var(--_1wmtieb25);
}
html._9se0yi11 ._9se0yi1t,
html:not(._9se0yi11) ._9se0yi1s {
  background: var(--_1wmtieb26);
}
html._9se0yi11 ._9se0yi1v,
html:not(._9se0yi11) ._9se0yi1u {
  background: var(--_1wmtieb27);
}
html._9se0yi11 ._9se0yi1x,
html:not(._9se0yi11) ._9se0yi1w {
  background: var(--_1wmtieb28);
}
html._9se0yi11 ._9se0yi1z,
html:not(._9se0yi11) ._9se0yi1y {
  background: var(--_1wmtieb29);
}
html._9se0yi11 ._9se0yi21,
html:not(._9se0yi11) ._9se0yi20 {
  background: var(--_1wmtieb2a);
}
html._9se0yi11 ._9se0yi23,
html:not(._9se0yi11) ._9se0yi22 {
  background: var(--_1wmtieb2b);
}
html._9se0yi11 ._9se0yi25,
html:not(._9se0yi11) ._9se0yi24 {
  background: var(--_1wmtieb2c);
}
html._9se0yi11 ._9se0yi27,
html:not(._9se0yi11) ._9se0yi26 {
  background: var(--_1wmtieb2d);
}
html._9se0yi11 ._9se0yi29,
html:not(._9se0yi11) ._9se0yi28 {
  background: var(--_1wmtieb2e);
}
html._9se0yi11 ._9se0yi2b,
html:not(._9se0yi11) ._9se0yi2a {
  background: var(--_1wmtieb2f);
}
html._9se0yi11 ._9se0yi2d,
html:not(._9se0yi11) ._9se0yi2c {
  background: var(--_1wmtieb2g);
}
html._9se0yi11 ._9se0yi2f,
html:not(._9se0yi11) ._9se0yi2e {
  background: var(--_1wmtieb2h);
}
html._9se0yi11 ._9se0yi2h,
html:not(._9se0yi11) ._9se0yi2g {
  background: var(--_1wmtieb2i);
}
html._9se0yi11 ._9se0yi2j,
html:not(._9se0yi11) ._9se0yi2i {
  background: var(--_1wmtieb2j);
}
html._9se0yi11 ._9se0yi2l,
html:not(._9se0yi11) ._9se0yi2k {
  background: var(--_1wmtieb2k);
}
html._9se0yi11 ._9se0yi2n,
html:not(._9se0yi11) ._9se0yi2m {
  background: var(--_1wmtieb2l);
}
html._9se0yi11 ._9se0yi2p,
html:not(._9se0yi11) ._9se0yi2o {
  background: var(--_1wmtieb2m);
}
html._9se0yi11 ._9se0yi2r,
html:not(._9se0yi11) ._9se0yi2q {
  background: var(--_1wmtieb2n);
}
html._9se0yi11 ._9se0yi2t,
html:not(._9se0yi11) ._9se0yi2s {
  background: var(--_1wmtieb2o);
}
html._9se0yi11 ._9se0yi2v,
html:not(._9se0yi11) ._9se0yi2u {
  background: var(--_1wmtieb2p);
}
html._9se0yi11 ._9se0yi2x,
html:not(._9se0yi11) ._9se0yi2w {
  background: var(--_1wmtieb2q);
}
html._9se0yi11 ._9se0yi2z,
html:not(._9se0yi11) ._9se0yi2y {
  background: var(--_1wmtieb2r);
}
html._9se0yi11 ._9se0yi31,
html:not(._9se0yi11) ._9se0yi30 {
  background: var(--_1wmtieb2s);
}
html._9se0yi11 ._9se0yi33,
html:not(._9se0yi11) ._9se0yi32 {
  background: var(--_1wmtieb2t);
}
html._9se0yi11 ._9se0yi35,
html:not(._9se0yi11) ._9se0yi34 {
  background: var(--_1wmtieb2u);
}
html._9se0yi11 ._9se0yi37,
html:not(._9se0yi11) ._9se0yi36 {
  background: var(--_1wmtieb2v);
}
html._9se0yi11 ._9se0yi39,
html:not(._9se0yi11) ._9se0yi38 {
  box-shadow: var(--_1wmtieb5l);
}
html._9se0yi11 ._9se0yi3b,
html:not(._9se0yi11) ._9se0yi3a {
  box-shadow: var(--_1wmtieb5m);
}
html._9se0yi11 ._9se0yi3d,
html:not(._9se0yi11) ._9se0yi3c {
  box-shadow: var(--_1wmtieb5n);
}
html._9se0yi11 ._9se0yi3f,
html:not(._9se0yi11) ._9se0yi3e {
  box-shadow: inset 0 0 0 var(--_1wmtieby) var(--_1wmtiebf);
}
html._9se0yi11 ._9se0yi3h,
html:not(._9se0yi11) ._9se0yi3g {
  box-shadow: inset 0 0 0 var(--_1wmtieby) var(--_1wmtiebg);
}
html._9se0yi11 ._9se0yi3j,
html:not(._9se0yi11) ._9se0yi3i {
  box-shadow: inset 0 0 0 var(--_1wmtiebz) var(--_1wmtiebf);
}
html._9se0yi11 ._9se0yi3l,
html:not(._9se0yi11) ._9se0yi3k {
  box-shadow: inset 0 0 0 var(--_1wmtiebz) var(--_1wmtiebg);
}
html._9se0yi11 ._9se0yi3n,
html:not(._9se0yi11) ._9se0yi3m {
  box-shadow: inset 0 0 0 var(--_1wmtieby) var(--_1wmtiebh);
}
html._9se0yi11 ._9se0yi3p,
html:not(._9se0yi11) ._9se0yi3o {
  box-shadow: inset 0 0 0 var(--_1wmtieby) var(--_1wmtiebi);
}
html._9se0yi11 ._9se0yi3r,
html:not(._9se0yi11) ._9se0yi3q {
  box-shadow: inset 0 0 0 var(--_1wmtieby) var(--_1wmtiebj);
}
html._9se0yi11 ._9se0yi3t,
html:not(._9se0yi11) ._9se0yi3s {
  box-shadow: inset 0 0 0 var(--_1wmtiebz) var(--_1wmtiebj);
}
html._9se0yi11 ._9se0yi3v,
html:not(._9se0yi11) ._9se0yi3u {
  box-shadow: inset 0 0 0 var(--_1wmtieby) var(--_1wmtiebk);
}
html._9se0yi11 ._9se0yi3x,
html:not(._9se0yi11) ._9se0yi3w {
  box-shadow: inset 0 0 0 var(--_1wmtiebz) var(--_1wmtiebk);
}
html._9se0yi11 ._9se0yi3z,
html:not(._9se0yi11) ._9se0yi3y {
  box-shadow: inset 0 0 0 var(--_1wmtieby) var(--_1wmtiebl);
}
html._9se0yi11 ._9se0yi41,
html:not(._9se0yi11) ._9se0yi40 {
  box-shadow: inset 0 0 0 var(--_1wmtieby) var(--_1wmtiebn);
}
html._9se0yi11 ._9se0yi43,
html:not(._9se0yi11) ._9se0yi42 {
  box-shadow: inset 0 0 0 var(--_1wmtiebz) var(--_1wmtiebn);
}
html._9se0yi11 ._9se0yi45,
html:not(._9se0yi11) ._9se0yi44 {
  box-shadow: inset 0 0 0 var(--_1wmtieby) var(--_1wmtiebo);
}
html._9se0yi11 ._9se0yi47,
html:not(._9se0yi11) ._9se0yi46 {
  box-shadow: inset 0 0 0 var(--_1wmtiebz) var(--_1wmtiebo);
}
html._9se0yi11 ._9se0yi49,
html:not(._9se0yi11) ._9se0yi48 {
  box-shadow: inset 0 0 0 var(--_1wmtieby) var(--_1wmtiebp);
}
html._9se0yi11 ._9se0yi4b,
html:not(._9se0yi11) ._9se0yi4a {
  box-shadow: inset 0 0 0 var(--_1wmtieby) var(--_1wmtiebq);
}
html._9se0yi11 ._9se0yi4d,
html:not(._9se0yi11) ._9se0yi4c {
  box-shadow: inset 0 0 0 var(--_1wmtieby) var(--_1wmtiebr);
}
html._9se0yi11 ._9se0yi4f,
html:not(._9se0yi11) ._9se0yi4e {
  box-shadow: inset 0 0 0 var(--_1wmtiebz) var(--_1wmtiebr);
}
html._9se0yi11 ._9se0yi4h,
html:not(._9se0yi11) ._9se0yi4g {
  box-shadow: inset 0 0 0 var(--_1wmtieby) var(--_1wmtiebs);
}
html._9se0yi11 ._9se0yi4j,
html:not(._9se0yi11) ._9se0yi4i {
  box-shadow: inset 0 0 0 var(--_1wmtiebz) var(--_1wmtiebs);
}
html._9se0yi11 ._9se0yi4l,
html:not(._9se0yi11) ._9se0yi4k {
  box-shadow: inset 0 0 0 var(--_1wmtieby) var(--_1wmtiebt);
}
html._9se0yi11 ._9se0yi4n,
html:not(._9se0yi11) ._9se0yi4m {
  box-shadow: inset 0 0 0 var(--_1wmtieby) var(--_1wmtiebu);
}
html._9se0yi11 ._9se0yi4p,
html:not(._9se0yi11) ._9se0yi4o {
  box-shadow: inset 0 0 0 var(--_1wmtieby) var(--_1wmtiebv);
}
html._9se0yi11 ._9se0yi4r,
html:not(._9se0yi11) ._9se0yi4q {
  box-shadow: inset 0 0 0 var(--_1wmtieby) var(--_1wmtiebw);
}
html._9se0yi11 ._9se0yi4t,
html:not(._9se0yi11) ._9se0yi4s {
  box-shadow: inset 0 0 0 var(--_1wmtieby) var(--_1wmtiebx);
}
html._9se0yi11 ._9se0yi4v,
html:not(._9se0yi11) ._9se0yi4u {
  box-shadow: 0 0 0 var(--_1wmtieb10) var(--_1wmtiebm);
}
._9se0yi4w {
  display: none;
}
._9se0yi50 {
  display: block;
}
._9se0yi54 {
  display: inline;
}
._9se0yi58 {
  display: inline-block;
}
._9se0yi5c {
  display: flex;
}
._9se0yi5g {
  position: relative;
}
._9se0yi5k {
  position: absolute;
}
._9se0yi5o {
  position: fixed;
}
._9se0yi5s {
  position: sticky;
}
._9se0yi5w {
  border-radius: 0;
}
._9se0yi60 {
  border-radius: 9999px;
}
._9se0yi64 {
  border-radius: var(--_1wmtiebb);
}
._9se0yi68 {
  border-radius: var(--_1wmtiebc);
}
._9se0yi6c {
  border-radius: var(--_1wmtiebd);
}
._9se0yi6g {
  border-radius: var(--_1wmtiebe);
}
._9se0yi6k {
  gap: var(--_1wmtieb0);
}
._9se0yi6o {
  gap: var(--_1wmtieb1);
}
._9se0yi6s {
  gap: var(--_1wmtieb2);
}
._9se0yi6w {
  gap: var(--_1wmtieb3);
}
._9se0yi70 {
  gap: var(--_1wmtieb4);
}
._9se0yi74 {
  gap: var(--_1wmtieb5);
}
._9se0yi78 {
  gap: var(--_1wmtieb6);
}
._9se0yi7c {
  gap: var(--_1wmtieb7);
}
._9se0yi7g {
  gap: var(--_1wmtieb8);
}
._9se0yi7k {
  gap: 0;
}
._9se0yi7o {
  padding-top: var(--_1wmtieb0);
}
._9se0yi7s {
  padding-top: var(--_1wmtieb1);
}
._9se0yi7w {
  padding-top: var(--_1wmtieb2);
}
._9se0yi80 {
  padding-top: var(--_1wmtieb3);
}
._9se0yi84 {
  padding-top: var(--_1wmtieb4);
}
._9se0yi88 {
  padding-top: var(--_1wmtieb5);
}
._9se0yi8c {
  padding-top: var(--_1wmtieb6);
}
._9se0yi8g {
  padding-top: var(--_1wmtieb7);
}
._9se0yi8k {
  padding-top: var(--_1wmtieb8);
}
._9se0yi8o {
  padding-top: 0;
}
._9se0yi8s {
  padding-bottom: var(--_1wmtieb0);
}
._9se0yi8w {
  padding-bottom: var(--_1wmtieb1);
}
._9se0yi90 {
  padding-bottom: var(--_1wmtieb2);
}
._9se0yi94 {
  padding-bottom: var(--_1wmtieb3);
}
._9se0yi98 {
  padding-bottom: var(--_1wmtieb4);
}
._9se0yi9c {
  padding-bottom: var(--_1wmtieb5);
}
._9se0yi9g {
  padding-bottom: var(--_1wmtieb6);
}
._9se0yi9k {
  padding-bottom: var(--_1wmtieb7);
}
._9se0yi9o {
  padding-bottom: var(--_1wmtieb8);
}
._9se0yi9s {
  padding-bottom: 0;
}
._9se0yi9w {
  padding-right: var(--_1wmtieb0);
}
._9se0yia0 {
  padding-right: var(--_1wmtieb1);
}
._9se0yia4 {
  padding-right: var(--_1wmtieb2);
}
._9se0yia8 {
  padding-right: var(--_1wmtieb3);
}
._9se0yiac {
  padding-right: var(--_1wmtieb4);
}
._9se0yiag {
  padding-right: var(--_1wmtieb5);
}
._9se0yiak {
  padding-right: var(--_1wmtieb6);
}
._9se0yiao {
  padding-right: var(--_1wmtieb7);
}
._9se0yias {
  padding-right: var(--_1wmtieb8);
}
._9se0yiaw {
  padding-right: 0;
}
._9se0yib0 {
  padding-left: var(--_1wmtieb0);
}
._9se0yib4 {
  padding-left: var(--_1wmtieb1);
}
._9se0yib8 {
  padding-left: var(--_1wmtieb2);
}
._9se0yibc {
  padding-left: var(--_1wmtieb3);
}
._9se0yibg {
  padding-left: var(--_1wmtieb4);
}
._9se0yibk {
  padding-left: var(--_1wmtieb5);
}
._9se0yibo {
  padding-left: var(--_1wmtieb6);
}
._9se0yibs {
  padding-left: var(--_1wmtieb7);
}
._9se0yibw {
  padding-left: var(--_1wmtieb8);
}
._9se0yic0 {
  padding-left: 0;
}
._9se0yic4 {
  margin-top: var(--_1wmtieb0);
}
._9se0yic8 {
  margin-top: var(--_1wmtieb1);
}
._9se0yicc {
  margin-top: var(--_1wmtieb2);
}
._9se0yicg {
  margin-top: var(--_1wmtieb3);
}
._9se0yick {
  margin-top: var(--_1wmtieb4);
}
._9se0yico {
  margin-top: var(--_1wmtieb5);
}
._9se0yics {
  margin-top: var(--_1wmtieb6);
}
._9se0yicw {
  margin-top: var(--_1wmtieb7);
}
._9se0yid0 {
  margin-top: var(--_1wmtieb8);
}
._9se0yid4 {
  margin-top: 0;
}
._9se0yid8 {
  margin-bottom: var(--_1wmtieb0);
}
._9se0yidc {
  margin-bottom: var(--_1wmtieb1);
}
._9se0yidg {
  margin-bottom: var(--_1wmtieb2);
}
._9se0yidk {
  margin-bottom: var(--_1wmtieb3);
}
._9se0yido {
  margin-bottom: var(--_1wmtieb4);
}
._9se0yids {
  margin-bottom: var(--_1wmtieb5);
}
._9se0yidw {
  margin-bottom: var(--_1wmtieb6);
}
._9se0yie0 {
  margin-bottom: var(--_1wmtieb7);
}
._9se0yie4 {
  margin-bottom: var(--_1wmtieb8);
}
._9se0yie8 {
  margin-bottom: 0;
}
._9se0yiec {
  margin-right: var(--_1wmtieb0);
}
._9se0yieg {
  margin-right: var(--_1wmtieb1);
}
._9se0yiek {
  margin-right: var(--_1wmtieb2);
}
._9se0yieo {
  margin-right: var(--_1wmtieb3);
}
._9se0yies {
  margin-right: var(--_1wmtieb4);
}
._9se0yiew {
  margin-right: var(--_1wmtieb5);
}
._9se0yif0 {
  margin-right: var(--_1wmtieb6);
}
._9se0yif4 {
  margin-right: var(--_1wmtieb7);
}
._9se0yif8 {
  margin-right: var(--_1wmtieb8);
}
._9se0yifc {
  margin-right: 0;
}
._9se0yifg {
  margin-left: var(--_1wmtieb0);
}
._9se0yifk {
  margin-left: var(--_1wmtieb1);
}
._9se0yifo {
  margin-left: var(--_1wmtieb2);
}
._9se0yifs {
  margin-left: var(--_1wmtieb3);
}
._9se0yifw {
  margin-left: var(--_1wmtieb4);
}
._9se0yig0 {
  margin-left: var(--_1wmtieb5);
}
._9se0yig4 {
  margin-left: var(--_1wmtieb6);
}
._9se0yig8 {
  margin-left: var(--_1wmtieb7);
}
._9se0yigc {
  margin-left: var(--_1wmtieb8);
}
._9se0yigg {
  margin-left: 0;
}
._9se0yigk {
  align-items: flex-start;
}
._9se0yigo {
  align-items: center;
}
._9se0yigs {
  align-items: flex-end;
}
._9se0yigw {
  justify-content: flex-start;
}
._9se0yih0 {
  justify-content: center;
}
._9se0yih4 {
  justify-content: flex-end;
}
._9se0yih8 {
  justify-content: space-between;
}
._9se0yihc {
  flex-direction: row;
}
._9se0yihg {
  flex-direction: row-reverse;
}
._9se0yihk {
  flex-direction: column;
}
._9se0yiho {
  flex-direction: column-reverse;
}
._9se0yihs {
  flex-wrap: wrap;
}
._9se0yihw {
  flex-wrap: nowrap;
}
._9se0yii0 {
  flex-shrink: 0;
}
._9se0yii4 {
  flex-grow: 0;
}
._9se0yii8 {
  flex-grow: 1;
}
._9se0yiic {
  text-align: left;
}
._9se0yiig {
  text-align: center;
}
._9se0yiik {
  text-align: right;
}
@media screen and (min-width: 740px) {
  ._9se0yi4x {
    display: none;
  }
  ._9se0yi51 {
    display: block;
  }
  ._9se0yi55 {
    display: inline;
  }
  ._9se0yi59 {
    display: inline-block;
  }
  ._9se0yi5d {
    display: flex;
  }
  ._9se0yi5h {
    position: relative;
  }
  ._9se0yi5l {
    position: absolute;
  }
  ._9se0yi5p {
    position: fixed;
  }
  ._9se0yi5t {
    position: sticky;
  }
  ._9se0yi5x {
    border-radius: 0;
  }
  ._9se0yi61 {
    border-radius: 9999px;
  }
  ._9se0yi65 {
    border-radius: var(--_1wmtiebb);
  }
  ._9se0yi69 {
    border-radius: var(--_1wmtiebc);
  }
  ._9se0yi6d {
    border-radius: var(--_1wmtiebd);
  }
  ._9se0yi6h {
    border-radius: var(--_1wmtiebe);
  }
  ._9se0yi6l {
    gap: var(--_1wmtieb0);
  }
  ._9se0yi6p {
    gap: var(--_1wmtieb1);
  }
  ._9se0yi6t {
    gap: var(--_1wmtieb2);
  }
  ._9se0yi6x {
    gap: var(--_1wmtieb3);
  }
  ._9se0yi71 {
    gap: var(--_1wmtieb4);
  }
  ._9se0yi75 {
    gap: var(--_1wmtieb5);
  }
  ._9se0yi79 {
    gap: var(--_1wmtieb6);
  }
  ._9se0yi7d {
    gap: var(--_1wmtieb7);
  }
  ._9se0yi7h {
    gap: var(--_1wmtieb8);
  }
  ._9se0yi7l {
    gap: 0;
  }
  ._9se0yi7p {
    padding-top: var(--_1wmtieb0);
  }
  ._9se0yi7t {
    padding-top: var(--_1wmtieb1);
  }
  ._9se0yi7x {
    padding-top: var(--_1wmtieb2);
  }
  ._9se0yi81 {
    padding-top: var(--_1wmtieb3);
  }
  ._9se0yi85 {
    padding-top: var(--_1wmtieb4);
  }
  ._9se0yi89 {
    padding-top: var(--_1wmtieb5);
  }
  ._9se0yi8d {
    padding-top: var(--_1wmtieb6);
  }
  ._9se0yi8h {
    padding-top: var(--_1wmtieb7);
  }
  ._9se0yi8l {
    padding-top: var(--_1wmtieb8);
  }
  ._9se0yi8p {
    padding-top: 0;
  }
  ._9se0yi8t {
    padding-bottom: var(--_1wmtieb0);
  }
  ._9se0yi8x {
    padding-bottom: var(--_1wmtieb1);
  }
  ._9se0yi91 {
    padding-bottom: var(--_1wmtieb2);
  }
  ._9se0yi95 {
    padding-bottom: var(--_1wmtieb3);
  }
  ._9se0yi99 {
    padding-bottom: var(--_1wmtieb4);
  }
  ._9se0yi9d {
    padding-bottom: var(--_1wmtieb5);
  }
  ._9se0yi9h {
    padding-bottom: var(--_1wmtieb6);
  }
  ._9se0yi9l {
    padding-bottom: var(--_1wmtieb7);
  }
  ._9se0yi9p {
    padding-bottom: var(--_1wmtieb8);
  }
  ._9se0yi9t {
    padding-bottom: 0;
  }
  ._9se0yi9x {
    padding-right: var(--_1wmtieb0);
  }
  ._9se0yia1 {
    padding-right: var(--_1wmtieb1);
  }
  ._9se0yia5 {
    padding-right: var(--_1wmtieb2);
  }
  ._9se0yia9 {
    padding-right: var(--_1wmtieb3);
  }
  ._9se0yiad {
    padding-right: var(--_1wmtieb4);
  }
  ._9se0yiah {
    padding-right: var(--_1wmtieb5);
  }
  ._9se0yial {
    padding-right: var(--_1wmtieb6);
  }
  ._9se0yiap {
    padding-right: var(--_1wmtieb7);
  }
  ._9se0yiat {
    padding-right: var(--_1wmtieb8);
  }
  ._9se0yiax {
    padding-right: 0;
  }
  ._9se0yib1 {
    padding-left: var(--_1wmtieb0);
  }
  ._9se0yib5 {
    padding-left: var(--_1wmtieb1);
  }
  ._9se0yib9 {
    padding-left: var(--_1wmtieb2);
  }
  ._9se0yibd {
    padding-left: var(--_1wmtieb3);
  }
  ._9se0yibh {
    padding-left: var(--_1wmtieb4);
  }
  ._9se0yibl {
    padding-left: var(--_1wmtieb5);
  }
  ._9se0yibp {
    padding-left: var(--_1wmtieb6);
  }
  ._9se0yibt {
    padding-left: var(--_1wmtieb7);
  }
  ._9se0yibx {
    padding-left: var(--_1wmtieb8);
  }
  ._9se0yic1 {
    padding-left: 0;
  }
  ._9se0yic5 {
    margin-top: var(--_1wmtieb0);
  }
  ._9se0yic9 {
    margin-top: var(--_1wmtieb1);
  }
  ._9se0yicd {
    margin-top: var(--_1wmtieb2);
  }
  ._9se0yich {
    margin-top: var(--_1wmtieb3);
  }
  ._9se0yicl {
    margin-top: var(--_1wmtieb4);
  }
  ._9se0yicp {
    margin-top: var(--_1wmtieb5);
  }
  ._9se0yict {
    margin-top: var(--_1wmtieb6);
  }
  ._9se0yicx {
    margin-top: var(--_1wmtieb7);
  }
  ._9se0yid1 {
    margin-top: var(--_1wmtieb8);
  }
  ._9se0yid5 {
    margin-top: 0;
  }
  ._9se0yid9 {
    margin-bottom: var(--_1wmtieb0);
  }
  ._9se0yidd {
    margin-bottom: var(--_1wmtieb1);
  }
  ._9se0yidh {
    margin-bottom: var(--_1wmtieb2);
  }
  ._9se0yidl {
    margin-bottom: var(--_1wmtieb3);
  }
  ._9se0yidp {
    margin-bottom: var(--_1wmtieb4);
  }
  ._9se0yidt {
    margin-bottom: var(--_1wmtieb5);
  }
  ._9se0yidx {
    margin-bottom: var(--_1wmtieb6);
  }
  ._9se0yie1 {
    margin-bottom: var(--_1wmtieb7);
  }
  ._9se0yie5 {
    margin-bottom: var(--_1wmtieb8);
  }
  ._9se0yie9 {
    margin-bottom: 0;
  }
  ._9se0yied {
    margin-right: var(--_1wmtieb0);
  }
  ._9se0yieh {
    margin-right: var(--_1wmtieb1);
  }
  ._9se0yiel {
    margin-right: var(--_1wmtieb2);
  }
  ._9se0yiep {
    margin-right: var(--_1wmtieb3);
  }
  ._9se0yiet {
    margin-right: var(--_1wmtieb4);
  }
  ._9se0yiex {
    margin-right: var(--_1wmtieb5);
  }
  ._9se0yif1 {
    margin-right: var(--_1wmtieb6);
  }
  ._9se0yif5 {
    margin-right: var(--_1wmtieb7);
  }
  ._9se0yif9 {
    margin-right: var(--_1wmtieb8);
  }
  ._9se0yifd {
    margin-right: 0;
  }
  ._9se0yifh {
    margin-left: var(--_1wmtieb0);
  }
  ._9se0yifl {
    margin-left: var(--_1wmtieb1);
  }
  ._9se0yifp {
    margin-left: var(--_1wmtieb2);
  }
  ._9se0yift {
    margin-left: var(--_1wmtieb3);
  }
  ._9se0yifx {
    margin-left: var(--_1wmtieb4);
  }
  ._9se0yig1 {
    margin-left: var(--_1wmtieb5);
  }
  ._9se0yig5 {
    margin-left: var(--_1wmtieb6);
  }
  ._9se0yig9 {
    margin-left: var(--_1wmtieb7);
  }
  ._9se0yigd {
    margin-left: var(--_1wmtieb8);
  }
  ._9se0yigh {
    margin-left: 0;
  }
  ._9se0yigl {
    align-items: flex-start;
  }
  ._9se0yigp {
    align-items: center;
  }
  ._9se0yigt {
    align-items: flex-end;
  }
  ._9se0yigx {
    justify-content: flex-start;
  }
  ._9se0yih1 {
    justify-content: center;
  }
  ._9se0yih5 {
    justify-content: flex-end;
  }
  ._9se0yih9 {
    justify-content: space-between;
  }
  ._9se0yihd {
    flex-direction: row;
  }
  ._9se0yihh {
    flex-direction: row-reverse;
  }
  ._9se0yihl {
    flex-direction: column;
  }
  ._9se0yihp {
    flex-direction: column-reverse;
  }
  ._9se0yiht {
    flex-wrap: wrap;
  }
  ._9se0yihx {
    flex-wrap: nowrap;
  }
  ._9se0yii1 {
    flex-shrink: 0;
  }
  ._9se0yii5 {
    flex-grow: 0;
  }
  ._9se0yii9 {
    flex-grow: 1;
  }
  ._9se0yiid {
    text-align: left;
  }
  ._9se0yiih {
    text-align: center;
  }
  ._9se0yiil {
    text-align: right;
  }
}
@media screen and (min-width: 992px) {
  ._9se0yi4y {
    display: none;
  }
  ._9se0yi52 {
    display: block;
  }
  ._9se0yi56 {
    display: inline;
  }
  ._9se0yi5a {
    display: inline-block;
  }
  ._9se0yi5e {
    display: flex;
  }
  ._9se0yi5i {
    position: relative;
  }
  ._9se0yi5m {
    position: absolute;
  }
  ._9se0yi5q {
    position: fixed;
  }
  ._9se0yi5u {
    position: sticky;
  }
  ._9se0yi5y {
    border-radius: 0;
  }
  ._9se0yi62 {
    border-radius: 9999px;
  }
  ._9se0yi66 {
    border-radius: var(--_1wmtiebb);
  }
  ._9se0yi6a {
    border-radius: var(--_1wmtiebc);
  }
  ._9se0yi6e {
    border-radius: var(--_1wmtiebd);
  }
  ._9se0yi6i {
    border-radius: var(--_1wmtiebe);
  }
  ._9se0yi6m {
    gap: var(--_1wmtieb0);
  }
  ._9se0yi6q {
    gap: var(--_1wmtieb1);
  }
  ._9se0yi6u {
    gap: var(--_1wmtieb2);
  }
  ._9se0yi6y {
    gap: var(--_1wmtieb3);
  }
  ._9se0yi72 {
    gap: var(--_1wmtieb4);
  }
  ._9se0yi76 {
    gap: var(--_1wmtieb5);
  }
  ._9se0yi7a {
    gap: var(--_1wmtieb6);
  }
  ._9se0yi7e {
    gap: var(--_1wmtieb7);
  }
  ._9se0yi7i {
    gap: var(--_1wmtieb8);
  }
  ._9se0yi7m {
    gap: 0;
  }
  ._9se0yi7q {
    padding-top: var(--_1wmtieb0);
  }
  ._9se0yi7u {
    padding-top: var(--_1wmtieb1);
  }
  ._9se0yi7y {
    padding-top: var(--_1wmtieb2);
  }
  ._9se0yi82 {
    padding-top: var(--_1wmtieb3);
  }
  ._9se0yi86 {
    padding-top: var(--_1wmtieb4);
  }
  ._9se0yi8a {
    padding-top: var(--_1wmtieb5);
  }
  ._9se0yi8e {
    padding-top: var(--_1wmtieb6);
  }
  ._9se0yi8i {
    padding-top: var(--_1wmtieb7);
  }
  ._9se0yi8m {
    padding-top: var(--_1wmtieb8);
  }
  ._9se0yi8q {
    padding-top: 0;
  }
  ._9se0yi8u {
    padding-bottom: var(--_1wmtieb0);
  }
  ._9se0yi8y {
    padding-bottom: var(--_1wmtieb1);
  }
  ._9se0yi92 {
    padding-bottom: var(--_1wmtieb2);
  }
  ._9se0yi96 {
    padding-bottom: var(--_1wmtieb3);
  }
  ._9se0yi9a {
    padding-bottom: var(--_1wmtieb4);
  }
  ._9se0yi9e {
    padding-bottom: var(--_1wmtieb5);
  }
  ._9se0yi9i {
    padding-bottom: var(--_1wmtieb6);
  }
  ._9se0yi9m {
    padding-bottom: var(--_1wmtieb7);
  }
  ._9se0yi9q {
    padding-bottom: var(--_1wmtieb8);
  }
  ._9se0yi9u {
    padding-bottom: 0;
  }
  ._9se0yi9y {
    padding-right: var(--_1wmtieb0);
  }
  ._9se0yia2 {
    padding-right: var(--_1wmtieb1);
  }
  ._9se0yia6 {
    padding-right: var(--_1wmtieb2);
  }
  ._9se0yiaa {
    padding-right: var(--_1wmtieb3);
  }
  ._9se0yiae {
    padding-right: var(--_1wmtieb4);
  }
  ._9se0yiai {
    padding-right: var(--_1wmtieb5);
  }
  ._9se0yiam {
    padding-right: var(--_1wmtieb6);
  }
  ._9se0yiaq {
    padding-right: var(--_1wmtieb7);
  }
  ._9se0yiau {
    padding-right: var(--_1wmtieb8);
  }
  ._9se0yiay {
    padding-right: 0;
  }
  ._9se0yib2 {
    padding-left: var(--_1wmtieb0);
  }
  ._9se0yib6 {
    padding-left: var(--_1wmtieb1);
  }
  ._9se0yiba {
    padding-left: var(--_1wmtieb2);
  }
  ._9se0yibe {
    padding-left: var(--_1wmtieb3);
  }
  ._9se0yibi {
    padding-left: var(--_1wmtieb4);
  }
  ._9se0yibm {
    padding-left: var(--_1wmtieb5);
  }
  ._9se0yibq {
    padding-left: var(--_1wmtieb6);
  }
  ._9se0yibu {
    padding-left: var(--_1wmtieb7);
  }
  ._9se0yiby {
    padding-left: var(--_1wmtieb8);
  }
  ._9se0yic2 {
    padding-left: 0;
  }
  ._9se0yic6 {
    margin-top: var(--_1wmtieb0);
  }
  ._9se0yica {
    margin-top: var(--_1wmtieb1);
  }
  ._9se0yice {
    margin-top: var(--_1wmtieb2);
  }
  ._9se0yici {
    margin-top: var(--_1wmtieb3);
  }
  ._9se0yicm {
    margin-top: var(--_1wmtieb4);
  }
  ._9se0yicq {
    margin-top: var(--_1wmtieb5);
  }
  ._9se0yicu {
    margin-top: var(--_1wmtieb6);
  }
  ._9se0yicy {
    margin-top: var(--_1wmtieb7);
  }
  ._9se0yid2 {
    margin-top: var(--_1wmtieb8);
  }
  ._9se0yid6 {
    margin-top: 0;
  }
  ._9se0yida {
    margin-bottom: var(--_1wmtieb0);
  }
  ._9se0yide {
    margin-bottom: var(--_1wmtieb1);
  }
  ._9se0yidi {
    margin-bottom: var(--_1wmtieb2);
  }
  ._9se0yidm {
    margin-bottom: var(--_1wmtieb3);
  }
  ._9se0yidq {
    margin-bottom: var(--_1wmtieb4);
  }
  ._9se0yidu {
    margin-bottom: var(--_1wmtieb5);
  }
  ._9se0yidy {
    margin-bottom: var(--_1wmtieb6);
  }
  ._9se0yie2 {
    margin-bottom: var(--_1wmtieb7);
  }
  ._9se0yie6 {
    margin-bottom: var(--_1wmtieb8);
  }
  ._9se0yiea {
    margin-bottom: 0;
  }
  ._9se0yiee {
    margin-right: var(--_1wmtieb0);
  }
  ._9se0yiei {
    margin-right: var(--_1wmtieb1);
  }
  ._9se0yiem {
    margin-right: var(--_1wmtieb2);
  }
  ._9se0yieq {
    margin-right: var(--_1wmtieb3);
  }
  ._9se0yieu {
    margin-right: var(--_1wmtieb4);
  }
  ._9se0yiey {
    margin-right: var(--_1wmtieb5);
  }
  ._9se0yif2 {
    margin-right: var(--_1wmtieb6);
  }
  ._9se0yif6 {
    margin-right: var(--_1wmtieb7);
  }
  ._9se0yifa {
    margin-right: var(--_1wmtieb8);
  }
  ._9se0yife {
    margin-right: 0;
  }
  ._9se0yifi {
    margin-left: var(--_1wmtieb0);
  }
  ._9se0yifm {
    margin-left: var(--_1wmtieb1);
  }
  ._9se0yifq {
    margin-left: var(--_1wmtieb2);
  }
  ._9se0yifu {
    margin-left: var(--_1wmtieb3);
  }
  ._9se0yify {
    margin-left: var(--_1wmtieb4);
  }
  ._9se0yig2 {
    margin-left: var(--_1wmtieb5);
  }
  ._9se0yig6 {
    margin-left: var(--_1wmtieb6);
  }
  ._9se0yiga {
    margin-left: var(--_1wmtieb7);
  }
  ._9se0yige {
    margin-left: var(--_1wmtieb8);
  }
  ._9se0yigi {
    margin-left: 0;
  }
  ._9se0yigm {
    align-items: flex-start;
  }
  ._9se0yigq {
    align-items: center;
  }
  ._9se0yigu {
    align-items: flex-end;
  }
  ._9se0yigy {
    justify-content: flex-start;
  }
  ._9se0yih2 {
    justify-content: center;
  }
  ._9se0yih6 {
    justify-content: flex-end;
  }
  ._9se0yiha {
    justify-content: space-between;
  }
  ._9se0yihe {
    flex-direction: row;
  }
  ._9se0yihi {
    flex-direction: row-reverse;
  }
  ._9se0yihm {
    flex-direction: column;
  }
  ._9se0yihq {
    flex-direction: column-reverse;
  }
  ._9se0yihu {
    flex-wrap: wrap;
  }
  ._9se0yihy {
    flex-wrap: nowrap;
  }
  ._9se0yii2 {
    flex-shrink: 0;
  }
  ._9se0yii6 {
    flex-grow: 0;
  }
  ._9se0yiia {
    flex-grow: 1;
  }
  ._9se0yiie {
    text-align: left;
  }
  ._9se0yiii {
    text-align: center;
  }
  ._9se0yiim {
    text-align: right;
  }
}
@media screen and (min-width: 1200px) {
  ._9se0yi4z {
    display: none;
  }
  ._9se0yi53 {
    display: block;
  }
  ._9se0yi57 {
    display: inline;
  }
  ._9se0yi5b {
    display: inline-block;
  }
  ._9se0yi5f {
    display: flex;
  }
  ._9se0yi5j {
    position: relative;
  }
  ._9se0yi5n {
    position: absolute;
  }
  ._9se0yi5r {
    position: fixed;
  }
  ._9se0yi5v {
    position: sticky;
  }
  ._9se0yi5z {
    border-radius: 0;
  }
  ._9se0yi63 {
    border-radius: 9999px;
  }
  ._9se0yi67 {
    border-radius: var(--_1wmtiebb);
  }
  ._9se0yi6b {
    border-radius: var(--_1wmtiebc);
  }
  ._9se0yi6f {
    border-radius: var(--_1wmtiebd);
  }
  ._9se0yi6j {
    border-radius: var(--_1wmtiebe);
  }
  ._9se0yi6n {
    gap: var(--_1wmtieb0);
  }
  ._9se0yi6r {
    gap: var(--_1wmtieb1);
  }
  ._9se0yi6v {
    gap: var(--_1wmtieb2);
  }
  ._9se0yi6z {
    gap: var(--_1wmtieb3);
  }
  ._9se0yi73 {
    gap: var(--_1wmtieb4);
  }
  ._9se0yi77 {
    gap: var(--_1wmtieb5);
  }
  ._9se0yi7b {
    gap: var(--_1wmtieb6);
  }
  ._9se0yi7f {
    gap: var(--_1wmtieb7);
  }
  ._9se0yi7j {
    gap: var(--_1wmtieb8);
  }
  ._9se0yi7n {
    gap: 0;
  }
  ._9se0yi7r {
    padding-top: var(--_1wmtieb0);
  }
  ._9se0yi7v {
    padding-top: var(--_1wmtieb1);
  }
  ._9se0yi7z {
    padding-top: var(--_1wmtieb2);
  }
  ._9se0yi83 {
    padding-top: var(--_1wmtieb3);
  }
  ._9se0yi87 {
    padding-top: var(--_1wmtieb4);
  }
  ._9se0yi8b {
    padding-top: var(--_1wmtieb5);
  }
  ._9se0yi8f {
    padding-top: var(--_1wmtieb6);
  }
  ._9se0yi8j {
    padding-top: var(--_1wmtieb7);
  }
  ._9se0yi8n {
    padding-top: var(--_1wmtieb8);
  }
  ._9se0yi8r {
    padding-top: 0;
  }
  ._9se0yi8v {
    padding-bottom: var(--_1wmtieb0);
  }
  ._9se0yi8z {
    padding-bottom: var(--_1wmtieb1);
  }
  ._9se0yi93 {
    padding-bottom: var(--_1wmtieb2);
  }
  ._9se0yi97 {
    padding-bottom: var(--_1wmtieb3);
  }
  ._9se0yi9b {
    padding-bottom: var(--_1wmtieb4);
  }
  ._9se0yi9f {
    padding-bottom: var(--_1wmtieb5);
  }
  ._9se0yi9j {
    padding-bottom: var(--_1wmtieb6);
  }
  ._9se0yi9n {
    padding-bottom: var(--_1wmtieb7);
  }
  ._9se0yi9r {
    padding-bottom: var(--_1wmtieb8);
  }
  ._9se0yi9v {
    padding-bottom: 0;
  }
  ._9se0yi9z {
    padding-right: var(--_1wmtieb0);
  }
  ._9se0yia3 {
    padding-right: var(--_1wmtieb1);
  }
  ._9se0yia7 {
    padding-right: var(--_1wmtieb2);
  }
  ._9se0yiab {
    padding-right: var(--_1wmtieb3);
  }
  ._9se0yiaf {
    padding-right: var(--_1wmtieb4);
  }
  ._9se0yiaj {
    padding-right: var(--_1wmtieb5);
  }
  ._9se0yian {
    padding-right: var(--_1wmtieb6);
  }
  ._9se0yiar {
    padding-right: var(--_1wmtieb7);
  }
  ._9se0yiav {
    padding-right: var(--_1wmtieb8);
  }
  ._9se0yiaz {
    padding-right: 0;
  }
  ._9se0yib3 {
    padding-left: var(--_1wmtieb0);
  }
  ._9se0yib7 {
    padding-left: var(--_1wmtieb1);
  }
  ._9se0yibb {
    padding-left: var(--_1wmtieb2);
  }
  ._9se0yibf {
    padding-left: var(--_1wmtieb3);
  }
  ._9se0yibj {
    padding-left: var(--_1wmtieb4);
  }
  ._9se0yibn {
    padding-left: var(--_1wmtieb5);
  }
  ._9se0yibr {
    padding-left: var(--_1wmtieb6);
  }
  ._9se0yibv {
    padding-left: var(--_1wmtieb7);
  }
  ._9se0yibz {
    padding-left: var(--_1wmtieb8);
  }
  ._9se0yic3 {
    padding-left: 0;
  }
  ._9se0yic7 {
    margin-top: var(--_1wmtieb0);
  }
  ._9se0yicb {
    margin-top: var(--_1wmtieb1);
  }
  ._9se0yicf {
    margin-top: var(--_1wmtieb2);
  }
  ._9se0yicj {
    margin-top: var(--_1wmtieb3);
  }
  ._9se0yicn {
    margin-top: var(--_1wmtieb4);
  }
  ._9se0yicr {
    margin-top: var(--_1wmtieb5);
  }
  ._9se0yicv {
    margin-top: var(--_1wmtieb6);
  }
  ._9se0yicz {
    margin-top: var(--_1wmtieb7);
  }
  ._9se0yid3 {
    margin-top: var(--_1wmtieb8);
  }
  ._9se0yid7 {
    margin-top: 0;
  }
  ._9se0yidb {
    margin-bottom: var(--_1wmtieb0);
  }
  ._9se0yidf {
    margin-bottom: var(--_1wmtieb1);
  }
  ._9se0yidj {
    margin-bottom: var(--_1wmtieb2);
  }
  ._9se0yidn {
    margin-bottom: var(--_1wmtieb3);
  }
  ._9se0yidr {
    margin-bottom: var(--_1wmtieb4);
  }
  ._9se0yidv {
    margin-bottom: var(--_1wmtieb5);
  }
  ._9se0yidz {
    margin-bottom: var(--_1wmtieb6);
  }
  ._9se0yie3 {
    margin-bottom: var(--_1wmtieb7);
  }
  ._9se0yie7 {
    margin-bottom: var(--_1wmtieb8);
  }
  ._9se0yieb {
    margin-bottom: 0;
  }
  ._9se0yief {
    margin-right: var(--_1wmtieb0);
  }
  ._9se0yiej {
    margin-right: var(--_1wmtieb1);
  }
  ._9se0yien {
    margin-right: var(--_1wmtieb2);
  }
  ._9se0yier {
    margin-right: var(--_1wmtieb3);
  }
  ._9se0yiev {
    margin-right: var(--_1wmtieb4);
  }
  ._9se0yiez {
    margin-right: var(--_1wmtieb5);
  }
  ._9se0yif3 {
    margin-right: var(--_1wmtieb6);
  }
  ._9se0yif7 {
    margin-right: var(--_1wmtieb7);
  }
  ._9se0yifb {
    margin-right: var(--_1wmtieb8);
  }
  ._9se0yiff {
    margin-right: 0;
  }
  ._9se0yifj {
    margin-left: var(--_1wmtieb0);
  }
  ._9se0yifn {
    margin-left: var(--_1wmtieb1);
  }
  ._9se0yifr {
    margin-left: var(--_1wmtieb2);
  }
  ._9se0yifv {
    margin-left: var(--_1wmtieb3);
  }
  ._9se0yifz {
    margin-left: var(--_1wmtieb4);
  }
  ._9se0yig3 {
    margin-left: var(--_1wmtieb5);
  }
  ._9se0yig7 {
    margin-left: var(--_1wmtieb6);
  }
  ._9se0yigb {
    margin-left: var(--_1wmtieb7);
  }
  ._9se0yigf {
    margin-left: var(--_1wmtieb8);
  }
  ._9se0yigj {
    margin-left: 0;
  }
  ._9se0yign {
    align-items: flex-start;
  }
  ._9se0yigr {
    align-items: center;
  }
  ._9se0yigv {
    align-items: flex-end;
  }
  ._9se0yigz {
    justify-content: flex-start;
  }
  ._9se0yih3 {
    justify-content: center;
  }
  ._9se0yih7 {
    justify-content: flex-end;
  }
  ._9se0yihb {
    justify-content: space-between;
  }
  ._9se0yihf {
    flex-direction: row;
  }
  ._9se0yihj {
    flex-direction: row-reverse;
  }
  ._9se0yihn {
    flex-direction: column;
  }
  ._9se0yihr {
    flex-direction: column-reverse;
  }
  ._9se0yihv {
    flex-wrap: wrap;
  }
  ._9se0yihz {
    flex-wrap: nowrap;
  }
  ._9se0yii3 {
    flex-shrink: 0;
  }
  ._9se0yii7 {
    flex-grow: 0;
  }
  ._9se0yiib {
    flex-grow: 1;
  }
  ._9se0yiif {
    text-align: left;
  }
  ._9se0yiij {
    text-align: center;
  }
  ._9se0yiin {
    text-align: right;
  }
}
.e739tz4 {
  font-size: var(--e739tz0);
  line-height: var(--e739tz1);
}
.e739tz4:before {
  content: "";
  display: table;
  margin-bottom: var(--e739tz2);
}
.e739tz4:after {
  content: "";
  display: table;
  margin-top: var(--e739tz3);
}
.mu12wp0 {
  font-family: var(--_1wmtieb2w);
}
.mu12wp1 {
  font-weight: var(--_1wmtieb46);
}
.mu12wp2 {
  font-weight: var(--_1wmtieb47);
}
.mu12wp3 {
  font-weight: var(--_1wmtieb48);
}
.mu12wp4 {
  --e739tz0: var(--_1wmtieb32);
  --e739tz1: var(--_1wmtieb33);
  --e739tz2: var(--_1wmtieb35);
  --e739tz3: var(--_1wmtieb36);
}
.mu12wp6 {
  --e739tz0: var(--_1wmtieb3c);
  --e739tz1: var(--_1wmtieb3d);
  --e739tz2: var(--_1wmtieb3f);
  --e739tz3: var(--_1wmtieb3g);
}
.mu12wp8 {
  --e739tz0: var(--_1wmtieb3m);
  --e739tz1: var(--_1wmtieb3n);
  --e739tz2: var(--_1wmtieb3p);
  --e739tz3: var(--_1wmtieb3q);
}
.mu12wpa {
  --e739tz0: var(--_1wmtieb3w);
  --e739tz1: var(--_1wmtieb3x);
  --e739tz2: var(--_1wmtieb3z);
  --e739tz3: var(--_1wmtieb40);
}
.mu12wpc {
  font-size: var(--_1wmtieb32);
  line-height: var(--_1wmtieb33);
}
.mu12wpd {
  font-size: var(--_1wmtieb3c);
  line-height: var(--_1wmtieb3d);
}
.mu12wpe {
  font-size: var(--_1wmtieb3m);
  line-height: var(--_1wmtieb3n);
}
.mu12wpf {
  font-size: var(--_1wmtieb3w);
  line-height: var(--_1wmtieb3x);
}
.mu12wpg {
  font-weight: var(--_1wmtieb5d);
}
.mu12wph {
  font-weight: var(--_1wmtieb5e);
}
.mu12wpi {
  --e739tz0: var(--_1wmtieb49);
  --e739tz1: var(--_1wmtieb4a);
  --e739tz2: var(--_1wmtieb4c);
  --e739tz3: var(--_1wmtieb4d);
}
.mu12wpk {
  --e739tz0: var(--_1wmtieb4j);
  --e739tz1: var(--_1wmtieb4k);
  --e739tz2: var(--_1wmtieb4m);
  --e739tz3: var(--_1wmtieb4n);
}
.mu12wpm {
  --e739tz0: var(--_1wmtieb4t);
  --e739tz1: var(--_1wmtieb4u);
  --e739tz2: var(--_1wmtieb4w);
  --e739tz3: var(--_1wmtieb4x);
}
.mu12wpo {
  --e739tz0: var(--_1wmtieb53);
  --e739tz1: var(--_1wmtieb54);
  --e739tz2: var(--_1wmtieb56);
  --e739tz3: var(--_1wmtieb57);
}
html:not(._9se0yi11) .mu12wp10 {
  --mu12wpq: var(--_1wmtieb19);
  --mu12wpr: var(--_1wmtieb17);
  --mu12wps: var(--_1wmtieb1d);
  --mu12wpt: var(--_1wmtieb1o);
  --mu12wpu: var(--_1wmtieb1m);
  --mu12wpv: var(--_1wmtieb15);
  --mu12wpw: var(--_1wmtieb1b);
  --mu12wpx: var(--_1wmtieb1k);
  --mu12wpy: var(--_1wmtieb1r);
  --mu12wpz: var(--_1wmtieb1f);
}
html:not(._9se0yi11) .mu12wp11 {
  --mu12wpq: var(--_1wmtieb1a);
  --mu12wpr: var(--_1wmtieb18);
  --mu12wps: var(--_1wmtieb1e);
  --mu12wpt: var(--_1wmtieb1p);
  --mu12wpu: var(--_1wmtieb1n);
  --mu12wpv: var(--_1wmtieb16);
  --mu12wpw: var(--_1wmtieb1c);
  --mu12wpx: var(--_1wmtieb1l);
  --mu12wpy: var(--_1wmtieb1s);
  --mu12wpz: var(--_1wmtieb1h);
}
html._9se0yi11 .mu12wp12 {
  --mu12wpq: var(--_1wmtieb19);
  --mu12wpr: var(--_1wmtieb17);
  --mu12wps: var(--_1wmtieb1d);
  --mu12wpt: var(--_1wmtieb1o);
  --mu12wpu: var(--_1wmtieb1m);
  --mu12wpv: var(--_1wmtieb15);
  --mu12wpw: var(--_1wmtieb1b);
  --mu12wpx: var(--_1wmtieb1k);
  --mu12wpy: var(--_1wmtieb1r);
  --mu12wpz: var(--_1wmtieb1f);
}
html._9se0yi11 .mu12wp13 {
  --mu12wpq: var(--_1wmtieb1a);
  --mu12wpr: var(--_1wmtieb18);
  --mu12wps: var(--_1wmtieb1e);
  --mu12wpt: var(--_1wmtieb1p);
  --mu12wpu: var(--_1wmtieb1n);
  --mu12wpv: var(--_1wmtieb16);
  --mu12wpw: var(--_1wmtieb1c);
  --mu12wpx: var(--_1wmtieb1l);
  --mu12wpy: var(--_1wmtieb1s);
  --mu12wpz: var(--_1wmtieb1h);
}
html:not(._9se0yi11) .mu12wp14,
html:not(._9se0yi11) .mu12wp15,
html:not(._9se0yi11) .mu12wp16,
html:not(._9se0yi11) .mu12wp17 {
  --mu12wpx: var(--mu12wpq);
}
html:not(._9se0yi11) .mu12wp18,
html:not(._9se0yi11) .mu12wp19 {
  --mu12wpx: var(--mu12wpr);
}
html:not(._9se0yi11) .mu12wp1a {
  --mu12wpx: var(--mu12wpu);
}
html:not(._9se0yi11) .mu12wp1b {
  --mu12wpx: var(--mu12wps);
}
html:not(._9se0yi11) .mu12wp1c {
  --mu12wpx: var(--mu12wpt);
}
html._9se0yi11 .mu12wp1d,
html._9se0yi11 .mu12wp1e,
html._9se0yi11 .mu12wp1f,
html._9se0yi11 .mu12wp1g {
  --mu12wpx: var(--mu12wpq);
}
html._9se0yi11 .mu12wp1h,
html._9se0yi11 .mu12wp1i {
  --mu12wpx: var(--mu12wpr);
}
html._9se0yi11 .mu12wp1j {
  --mu12wpx: var(--mu12wpu);
}
html._9se0yi11 .mu12wp1k {
  --mu12wpx: var(--mu12wps);
}
html._9se0yi11 .mu12wp1l {
  --mu12wpx: var(--mu12wpt);
}
.mu12wp1m {
  color: var(--mu12wpq);
}
.mu12wp1n {
  color: var(--mu12wpr);
}
.mu12wp1o {
  color: var(--mu12wps);
}
.mu12wp1p {
  color: var(--mu12wpt);
}
.mu12wp1q {
  color: var(--mu12wpu);
}
.mu12wp1r {
  color: var(--mu12wpv);
}
.mu12wp1s {
  color: var(--mu12wpw);
}
.mu12wp1t {
  color: var(--mu12wpx);
}
.mu12wp1u {
  color: var(--mu12wpy);
}
.mu12wp1v {
  color: var(--mu12wpz);
}
.mu12wp1w {
  padding-bottom: calc((var(--_1wmtieb9) - var(--_1wmtieb33)) / 2);
  padding-top: calc((var(--_1wmtieb9) - var(--_1wmtieb33)) / 2);
}
.mu12wp1x {
  padding-bottom: calc((var(--_1wmtieb9) - var(--_1wmtieb3d)) / 2);
  padding-top: calc((var(--_1wmtieb9) - var(--_1wmtieb3d)) / 2);
}
.mu12wp1y {
  padding-bottom: calc((var(--_1wmtieb9) - var(--_1wmtieb3n)) / 2);
  padding-top: calc((var(--_1wmtieb9) - var(--_1wmtieb3n)) / 2);
}
.mu12wp1z {
  padding-bottom: calc((var(--_1wmtieb9) - var(--_1wmtieb3x)) / 2);
  padding-top: calc((var(--_1wmtieb9) - var(--_1wmtieb3x)) / 2);
}
@media screen and (min-width: 740px) {
  .mu12wp4 {
    --e739tz0: var(--_1wmtieb37);
    --e739tz1: var(--_1wmtieb38);
    --e739tz2: var(--_1wmtieb3a);
    --e739tz3: var(--_1wmtieb3b);
  }
  .mu12wp6 {
    --e739tz0: var(--_1wmtieb3h);
    --e739tz1: var(--_1wmtieb3i);
    --e739tz2: var(--_1wmtieb3k);
    --e739tz3: var(--_1wmtieb3l);
  }
  .mu12wp8 {
    --e739tz0: var(--_1wmtieb3r);
    --e739tz1: var(--_1wmtieb3s);
    --e739tz2: var(--_1wmtieb3u);
    --e739tz3: var(--_1wmtieb3v);
  }
  .mu12wpa {
    --e739tz0: var(--_1wmtieb41);
    --e739tz1: var(--_1wmtieb42);
    --e739tz2: var(--_1wmtieb44);
    --e739tz3: var(--_1wmtieb45);
  }
  .mu12wpc {
    font-size: var(--_1wmtieb37);
    line-height: var(--_1wmtieb38);
  }
  .mu12wpd {
    font-size: var(--_1wmtieb3h);
    line-height: var(--_1wmtieb3i);
  }
  .mu12wpe {
    font-size: var(--_1wmtieb3r);
    line-height: var(--_1wmtieb3s);
  }
  .mu12wpf {
    font-size: var(--_1wmtieb41);
    line-height: var(--_1wmtieb42);
  }
  .mu12wpi {
    --e739tz0: var(--_1wmtieb4e);
    --e739tz1: var(--_1wmtieb4f);
    --e739tz2: var(--_1wmtieb4h);
    --e739tz3: var(--_1wmtieb4i);
  }
  .mu12wpk {
    --e739tz0: var(--_1wmtieb4o);
    --e739tz1: var(--_1wmtieb4p);
    --e739tz2: var(--_1wmtieb4r);
    --e739tz3: var(--_1wmtieb4s);
  }
  .mu12wpm {
    --e739tz0: var(--_1wmtieb4y);
    --e739tz1: var(--_1wmtieb4z);
    --e739tz2: var(--_1wmtieb51);
    --e739tz3: var(--_1wmtieb52);
  }
  .mu12wpo {
    --e739tz0: var(--_1wmtieb58);
    --e739tz1: var(--_1wmtieb59);
    --e739tz2: var(--_1wmtieb5b);
    --e739tz3: var(--_1wmtieb5c);
  }
  .mu12wp1w {
    padding-bottom: calc((var(--_1wmtieb9) - var(--_1wmtieb38)) / 2);
    padding-top: calc((var(--_1wmtieb9) - var(--_1wmtieb38)) / 2);
  }
  .mu12wp1x {
    padding-bottom: calc((var(--_1wmtieb9) - var(--_1wmtieb3i)) / 2);
    padding-top: calc((var(--_1wmtieb9) - var(--_1wmtieb3i)) / 2);
  }
  .mu12wp1y {
    padding-bottom: calc((var(--_1wmtieb9) - var(--_1wmtieb3s)) / 2);
    padding-top: calc((var(--_1wmtieb9) - var(--_1wmtieb3s)) / 2);
  }
  .mu12wp1z {
    padding-bottom: calc((var(--_1wmtieb9) - var(--_1wmtieb42)) / 2);
    padding-top: calc((var(--_1wmtieb9) - var(--_1wmtieb42)) / 2);
  }
}
.xx7s3l0 {
  --_1wmtieb0: 24px;
  --_1wmtieb1: 8px;
  --_1wmtieb2: 12px;
  --_1wmtieb3: 16px;
  --_1wmtieb4: 24px;
  --_1wmtieb5: 32px;
  --_1wmtieb6: 48px;
  --_1wmtieb7: 64px;
  --_1wmtieb8: 96px;
  --_1wmtieb9: 48px;
  --_1wmtieba: 4px;
  --_1wmtiebb: 4px;
  --_1wmtiebc: 8px;
  --_1wmtiebd: 16px;
  --_1wmtiebe: 24px;
  --_1wmtiebf: #e60278;
  --_1wmtiebg: #f8b1dc;
  --_1wmtiebh: #fdc221;
  --_1wmtiebi: #fee384;
  --_1wmtiebj: #b91e1e;
  --_1wmtiebk: #fb999a;
  --_1wmtiebl: #838fa5;
  --_1wmtiebm: rgba(153, 191, 247, 0.7);
  --_1wmtiebn: #1e47a9;
  --_1wmtiebo: #99bff7;
  --_1wmtiebp: #1d559d;
  --_1wmtiebq: #98c9f1;
  --_1wmtiebr: #2e3849;
  --_1wmtiebt: #eaecf1;
  --_1wmtiebs: #fff;
  --_1wmtiebu: #12784f;
  --_1wmtiebv: #8bdec5;
  --_1wmtiebw: #7f35a9;
  --_1wmtiebx: #e1b2f5;
  --_1wmtieby: 2px;
  --_1wmtiebz: 4px;
  --_1wmtieb10: 6px;
  --_1wmtieb11: 400px;
  --_1wmtieb12: 660px;
  --_1wmtieb13: 940px;
  --_1wmtieb14: 1280px;
  --_1wmtieb15: #e60278;
  --_1wmtieb16: #f8b1dc;
  --_1wmtieb17: #723d02;
  --_1wmtieb18: #fee384;
  --_1wmtieb19: #b91e1e;
  --_1wmtieb1a: #fb999a;
  --_1wmtieb1b: #1e47a9;
  --_1wmtieb1c: #99bff7;
  --_1wmtieb1d: #1d559d;
  --_1wmtieb1e: #98c9f1;
  --_1wmtieb1f: #2e3849;
  --_1wmtieb1h: #fff;
  --_1wmtieb1g: #2e3849;
  --_1wmtieb1i: #5b2084;
  --_1wmtieb1j: #f0d6fa;
  --_1wmtieb1k: #2e3849;
  --_1wmtieb1l: #fff;
  --_1wmtieb1m: #12784f;
  --_1wmtieb1n: #8bdec5;
  --_1wmtieb1o: #7f35a9;
  --_1wmtieb1p: #e1b2f5;
  --_1wmtieb1q: #e60278;
  --_1wmtieb1r: #5a6881;
  --_1wmtieb1s: hsla(0, 0%, 100%, 0.65);
  --_1wmtieb1t: #fff;
  --_1wmtieb1u: #1c2330;
  --_1wmtieb1v: #051a49;
  --_1wmtieb1w: #e60278;
  --_1wmtieb1x: #cd026b;
  --_1wmtieb1y: #fd0585;
  --_1wmtieb1z: #feeffa;
  --_1wmtieb20: #fdd7f3;
  --_1wmtieb21: #fde3f6;
  --_1wmtieb22: #fdc221;
  --_1wmtieb23: #fef8de;
  --_1wmtieb24: #b91e1e;
  --_1wmtieb25: #a31a1a;
  --_1wmtieb26: #db1616;
  --_1wmtieb27: #ffe3e2;
  --_1wmtieb28: #fef3f3;
  --_1wmtieb29: #fcdbdb;
  --_1wmtieb2a: #fde7e7;
  --_1wmtieb2b: #1e47a9;
  --_1wmtieb2c: #1a3e93;
  --_1wmtieb2d: #2455c9;
  --_1wmtieb2e: #f0f7fe;
  --_1wmtieb2f: #d8eafc;
  --_1wmtieb2g: #e4f1fd;
  --_1wmtieb2h: #1d559d;
  --_1wmtieb2i: #e3f2fb;
  --_1wmtieb2j: #2e3849;
  --_1wmtieb2k: #242c39;
  --_1wmtieb2l: #384459;
  --_1wmtieb2m: #f3f5f7;
  --_1wmtieb2n: #f3f5f7;
  --_1wmtieb2o: #e4e8ed;
  --_1wmtieb2p: #ebeff2;
  --_1wmtieb2q: #12784f;
  --_1wmtieb2r: #e2f7f1;
  --_1wmtieb2s: #7f35a9;
  --_1wmtieb2t: #f9ebfd;
  --_1wmtieb2u: #fff;
  --_1wmtieb2v: #1c2330;
  --_1wmtieb2w: SeekSans, "SeekSans Fallback", Arial, Tahoma, sans-serif;
  --_1wmtieb2x: 783;
  --_1wmtieb2y: 1057;
  --_1wmtieb2z: -274;
  --_1wmtieb30: 0;
  --_1wmtieb31: 1000;
  --_1wmtieb3w: 18px;
  --_1wmtieb3x: 27.094px;
  --_1wmtieb3y: 14.094px;
  --_1wmtieb3z: -0.3611em;
  --_1wmtieb40: -0.3611em;
  --_1wmtieb41: 18px;
  --_1wmtieb42: 27.094px;
  --_1wmtieb43: 14.094px;
  --_1wmtieb44: -0.3611em;
  --_1wmtieb45: -0.3611em;
  --_1wmtieb3m: 16px;
  --_1wmtieb3n: 24.528px;
  --_1wmtieb3o: 12.528px;
  --_1wmtieb3p: -0.375em;
  --_1wmtieb3q: -0.375em;
  --_1wmtieb3r: 16px;
  --_1wmtieb3s: 24.528px;
  --_1wmtieb3t: 12.528px;
  --_1wmtieb3u: -0.375em;
  --_1wmtieb3v: -0.375em;
  --_1wmtieb3c: 14px;
  --_1wmtieb3d: 20.962px;
  --_1wmtieb3e: 10.962px;
  --_1wmtieb3f: -0.3571em;
  --_1wmtieb3g: -0.3571em;
  --_1wmtieb3h: 14px;
  --_1wmtieb3i: 20.962px;
  --_1wmtieb3j: 10.962px;
  --_1wmtieb3k: -0.3571em;
  --_1wmtieb3l: -0.3571em;
  --_1wmtieb32: 12px;
  --_1wmtieb33: 18.396px;
  --_1wmtieb34: 9.396px;
  --_1wmtieb35: -0.375em;
  --_1wmtieb36: -0.375em;
  --_1wmtieb37: 12px;
  --_1wmtieb38: 18.396px;
  --_1wmtieb39: 9.396px;
  --_1wmtieb3a: -0.375em;
  --_1wmtieb3b: -0.375em;
  --_1wmtieb46: 400;
  --_1wmtieb47: 600;
  --_1wmtieb48: 700;
  --_1wmtieb49: 28px;
  --_1wmtieb4a: 32.924px;
  --_1wmtieb4b: 21.924px;
  --_1wmtieb4c: -0.1964em;
  --_1wmtieb4d: -0.1964em;
  --_1wmtieb4e: 36px;
  --_1wmtieb4f: 42.188px;
  --_1wmtieb4g: 28.188px;
  --_1wmtieb4h: -0.1944em;
  --_1wmtieb4i: -0.1944em;
  --_1wmtieb4j: 24px;
  --_1wmtieb4k: 29.792px;
  --_1wmtieb4l: 18.792px;
  --_1wmtieb4m: -0.2292em;
  --_1wmtieb4n: -0.2292em;
  --_1wmtieb4o: 30px;
  --_1wmtieb4p: 36.49px;
  --_1wmtieb4q: 23.49px;
  --_1wmtieb4r: -0.2167em;
  --_1wmtieb4s: -0.2167em;
  --_1wmtieb4t: 22px;
  --_1wmtieb4u: 27.226px;
  --_1wmtieb4v: 17.226px;
  --_1wmtieb4w: -0.2273em;
  --_1wmtieb4x: -0.2273em;
  --_1wmtieb4y: 24px;
  --_1wmtieb4z: 29.792px;
  --_1wmtieb50: 18.792px;
  --_1wmtieb51: -0.2292em;
  --_1wmtieb52: -0.2292em;
  --_1wmtieb53: 20px;
  --_1wmtieb54: 24.66px;
  --_1wmtieb55: 15.66px;
  --_1wmtieb56: -0.225em;
  --_1wmtieb57: -0.225em;
  --_1wmtieb58: 20px;
  --_1wmtieb59: 24.66px;
  --_1wmtieb5a: 15.66px;
  --_1wmtieb5b: -0.225em;
  --_1wmtieb5c: -0.225em;
  --_1wmtieb5d: 400;
  --_1wmtieb5e: 600;
  --_1wmtieb5f: underline;
  --_1wmtieb5g: 24px;
  --_1wmtieb5h: 20px;
  --_1wmtieb5i: transform 0.125s ease, opacity 0.125s ease;
  --_1wmtieb5j: transform 0.2s cubic-bezier(0.02, 1.505, 0.745, 1.235);
  --_1wmtieb5k: scale(0.95);
  --_1wmtieb5l:
    0 0 4px 0 rgba(28, 35, 48, 0.08), 0 4px 8px -2px rgba(28, 35, 48, 0.08);
  --_1wmtieb5m:
    0 0 8px 0 rgba(28, 35, 48, 0.08), 0 8px 16px -4px rgba(28, 35, 48, 0.08);
  --_1wmtieb5n:
    0 0 12px 0 rgba(28, 35, 48, 0.08), 0 12px 24px -6px rgba(28, 35, 48, 0.08);
}
.s52s2f6 {
  background: var(--s52s2f0);
}
.s52s2f7 {
  background: var(--s52s2f1);
}
.s52s2f8 {
  background: var(--s52s2f2);
}
.s52s2f9 {
  background: var(--s52s2f3);
}
.s52s2fa {
  background: var(--s52s2f4);
}
.s52s2fb {
  background: var(--s52s2f5);
}
html:not(._9se0yi11) .s52s2fc {
  --s52s2f0: var(--_1wmtiebw);
  --s52s2f1: var(--_1wmtiebp);
  --s52s2f2: var(--_1wmtiebu);
  --s52s2f3: var(--_1wmtiebh);
  --s52s2f4: var(--_1wmtiebj);
  --s52s2f5: var(--_1wmtiebn);
}
html:not(._9se0yi11) .s52s2fd {
  --s52s2f0: var(--_1wmtiebx);
  --s52s2f1: var(--_1wmtiebq);
  --s52s2f2: var(--_1wmtiebv);
  --s52s2f3: var(--_1wmtiebi);
  --s52s2f4: var(--_1wmtiebk);
  --s52s2f5: var(--_1wmtiebo);
}
html._9se0yi11 .s52s2fe {
  --s52s2f0: var(--_1wmtiebw);
  --s52s2f1: var(--_1wmtiebp);
  --s52s2f2: var(--_1wmtiebu);
  --s52s2f3: var(--_1wmtiebh);
  --s52s2f4: var(--_1wmtiebj);
  --s52s2f5: var(--_1wmtiebn);
}
html._9se0yi11 .s52s2ff {
  --s52s2f0: var(--_1wmtiebx);
  --s52s2f1: var(--_1wmtiebq);
  --s52s2f2: var(--_1wmtiebv);
  --s52s2f3: var(--_1wmtiebi);
  --s52s2f4: var(--_1wmtiebk);
  --s52s2f5: var(--_1wmtiebo);
}
.s52s2fg {
  border-bottom-right-radius: 0 !important;
  border-top-right-radius: 0 !important;
}
.s52s2fh {
  width: var(--_1wmtiebe);
}
.s52s2fi {
  width: var(--_1wmtieba);
}
.crqy770 {
  margin-bottom: -0.1em;
}
.crqy772 {
  overflow-wrap: break-word;
  text-overflow: ellipsis;
  white-space: nowrap;
}
.crqy770 .crqy772 {
  padding-bottom: 0.1em;
}
@supports (display: -webkit-box) and (-webkit-line-clamp: 1) {
  .crqy774 {
    display: -webkit-box;
    white-space: normal;
    -webkit-line-clamp: var(--crqy773);
    -webkit-box-orient: vertical;
  }
}
,
  "main.js": "CONTENTS IGNORED IN SNAPSHOT TEST",
  "main.js.LICENSE.txt": /**
 * @license React
 * react-dom-client.production.js
 *
 * Copyright (c) Meta Platforms, Inc. and affiliates.
 *
 * This source code is licensed under the MIT license found in the
 * LICENSE file in the root directory of this source tree.
 */

/**
 * @license React
 * react-dom.production.js
 *
 * Copyright (c) Meta Platforms, Inc. and affiliates.
 *
 * This source code is licensed under the MIT license found in the
 * LICENSE file in the root directory of this source tree.
 */

/**
 * @license React
 * react-jsx-runtime.production.js
 *
 * Copyright (c) Meta Platforms, Inc. and affiliates.
 *
 * This source code is licensed under the MIT license found in the
 * LICENSE file in the root directory of this source tree.
 */

/**
 * @license React
 * react.production.js
 *
 * Copyright (c) Meta Platforms, Inc. and affiliates.
 *
 * This source code is licensed under the MIT license found in the
 * LICENSE file in the root directory of this source tree.
 */

/**
 * @license React
 * scheduler.production.js
 *
 * Copyright (c) Meta Platforms, Inc. and affiliates.
 *
 * This source code is licensed under the MIT license found in the
 * LICENSE file in the root directory of this source tree.
 */
,
}
`;

exports[`sku-webpack-plugin > start > should start a development server 1`] = `
===================================================================
--- sourceHtml
+++ clientHtml
@@ -1,24 +1,37 @@
 <!DOCTYPE html>
 <html>
   <head>
     <meta charset="utf-8">
     <title>
       Webpack App
     </title>
     <meta
       name="viewport"
       content="width=device-width, initial-scale=1"
     >
     <script
       defer
       src="main.js"
     >
     </script>
     <link
       href="main.css"
       rel="stylesheet"
     >
   </head>
   <body>
+    <div>
+      <style type="text/css">
+        html,body{margin:0;padding:0;background:#fff}
+            html.sprinkles_darkMode__9se0yi11,html.sprinkles_darkMode__9se0yi11 body{color-scheme:dark;background:#1C2330}
+      </style>
+      <div class="seekJobs_seekJobs__xx7s3l0 typography_lightModeTone_light__mu12wp10 typography_darkModeTone_dark__mu12wp13">
+        <div class="reset_base__1lozp820 sprinkles_paddingBottom_gutter_mobile__9se0yi8s sprinkles_paddingTop_gutter_mobile__9se0yi7o sprinkles_paddingLeft_gutter_mobile__9se0yib0 sprinkles_paddingRight_gutter_mobile__9se0yi9w sprinkles_position_relative_mobile__9se0yi5g sprinkles_borderRadius_large_mobile__9se0yi6c sprinkles_textAlign_left_mobile__9se0yiic sprinkles_boxShadow_borderNeutralLight_lightMode__9se0yi4k sprinkles_boxShadow_borderNeutral_darkMode__9se0yi4d typography_lightModeTone_light__mu12wp10 typography_darkModeTone_dark__mu12wp13 sprinkles_background_surface_lightMode__9se0yi34 sprinkles_background_surfaceDark_darkMode__9se0yi37">
+          <span class="reset_base__1lozp820 sprinkles_display_block_mobile__9se0yi50 typography_fontFamily__mu12wp0 typography_fontWeight_regular__mu12wp1 typography_tone_neutral__mu12wp1t typography_textSize_large__mu12wpa capsize_capsizeStyle__e739tz4">
+            Is it working?
+          </span>
+        </div>
+      </div>
+    </div>
   </body>
 </html>
\\ No newline at end of file
`;
